--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -18995,193 +18995,193 @@
 岭	lễnh	
 嶺	lễnh	
 領	lễnh	
-𧒽	lui	
-𨀤	lui	
-𨂐	lui	
-旅	lúi	
-櫚	lúi	
-累	lúi	
-膂	lúi	
-㒍	lùi	
-㗊	lùi	
-㠠	lùi	
-㱺	lùi	
-㲎	lùi	
-㵢	lùi	
-㹎	lùi	
-䄛	lùi	
-䋈	lùi	
-䍣	lùi	
-䐯	lùi	
-䕡	lùi	
-䨓	lùi	
-䯁	lùi	
-儽	lùi	
-壘	lùi	
-壨	lùi	
-婁	lùi	
-嫘	lùi	
-擂	lùi	
-攂	lùi	
-樏	lùi	
-檑	lùi	
-櫑	lùi	
-櫚	lùi	
-欙	lùi	
-氀	lùi	
-爈	lùi	
-璷	lùi	
-瓃	lùi	
-畾	lùi	
-瘰	lùi	
-盧	lùi	
-累	lùi	
-縲	lùi	
-纍	lùi	
-纝	lùi	
-罍	lùi	
-羸	lùi	
-膢	lùi	
-蒘	lùi	
-蔂	lùi	
-蕾	lùi	
-藘	lùi	
-蘲	lùi	
-虆	lùi	
-轠	lùi	
-鐳	lùi	
-鑘	lùi	
-閭	lùi	
-雷	lùi	
-靁	lùi	
-騾	lùi	
-驢	lùi	
-鱩	lùi	
-鷜	lùi	
-鼺	lùi	
-𣚎	lùi	
-𦌵	lùi	
-𨯔	lùi	
-㒦	lũi	
-㙼	lũi	
-㛎	lũi	
-㜢	lũi	
-㭚	lũi	
-㵽	lũi	
-㶟	lũi	
-㻲	lũi	
-㼍	lũi	
-㼏	lũi	
-㾔	lũi	
-㿔	lũi	
-䉂	lũi	
-䢮	lũi	
-䣂	lũi	
-䲎	lũi	
-䴎	lũi	
-侶	lũi	
-傫	lũi	
-僂	lũi	
-儡	lũi	
-儢	lũi	
-儽	lũi	
-厽	lũi	
-呂	lũi	
-垒	lũi	
-塁	lũi	
-壘	lũi	
-屢	lũi	
-履	lũi	
-挔	lũi	
-捛	lũi	
-旅	lũi	
-梠	lũi	
-櫐	lũi	
-櫑	lũi	
-漯	lũi	
-灅	lũi	
-焒	lũi	
-癗	lũi	
-磊	lũi	
-磥	lũi	
-礌	lũi	
-礨	lũi	
-祣	lũi	
-稆	lũi	
-穭	lũi	
-累	lũi	
-絫	lũi	
-絽	lũi	
-縷	lũi	
-纍	lũi	
-耒	lũi	
-腂	lũi	
-膂	lũi	
-膐	lũi	
-蕌	lũi	
-蕾	lũi	
-藟	lũi	
-蘽	lũi	
-蜼	lũi	
-蠝	lũi	
-裏	lũi	
-裡	lũi	
-褸	lũi	
-誄	lũi	
-謱	lũi	
-讄	lũi	
-郘	lũi	
-鋁	lũi	
-鑸	lũi	
-閭	lũi	
-頛	lũi	
-鸓	lũi	
-麿	lũi	
-𥚃	lũi	
-𧃒	lũi	
-㔣	lụi	
-㔧	lụi	
-㴃	lụi	
-䉪	lụi	
-䓞	lụi	
-䣦	lụi	
-䥨	lụi	
-䫫	lụi	
-䮉	lụi	
-䮑	lụi	
-勴	lụi	
-唳	lụi	
-彙	lụi	
-悷	lụi	
-慮	lụi	
-戾	lụi	
-捩	lụi	
-檑	lụi	
-櫖	lụi	
-沴	lụi	
-沵	lụi	
-洡	lụi	
-涙	lụi	
-淚	lụi	
-濾	lụi	
-瓃	lụi	
-盭	lụi	
-礌	lụi	
-礧	lụi	
-禷	lụi	
-累	lụi	
-纇	lụi	
-纍	lụi	
-耒	lụi	
-蘱	lụi	
-誄	lụi	
-酹	lụi	
-銇	lụi	
-錑	lụi	
-鑢	lụi	
-類	lụi	
-𧭜	lụi	
-𩸭	lụi	
+𧒽	luy	
+𨀤	luy	
+𨂐	luy	
+旅	lúy	
+櫚	lúy	
+累	lúy	
+膂	lúy	
+㒍	lùy	
+㗊	lùy	
+㠠	lùy	
+㱺	lùy	
+㲎	lùy	
+㵢	lùy	
+㹎	lùy	
+䄛	lùy	
+䋈	lùy	
+䍣	lùy	
+䐯	lùy	
+䕡	lùy	
+䨓	lùy	
+䯁	lùy	
+儽	lùy	
+壘	lùy	
+壨	lùy	
+婁	lùy	
+嫘	lùy	
+擂	lùy	
+攂	lùy	
+樏	lùy	
+檑	lùy	
+櫑	lùy	
+櫚	lùy	
+欙	lùy	
+氀	lùy	
+爈	lùy	
+璷	lùy	
+瓃	lùy	
+畾	lùy	
+瘰	lùy	
+盧	lùy	
+累	lùy	
+縲	lùy	
+纍	lùy	
+纝	lùy	
+罍	lùy	
+羸	lùy	
+膢	lùy	
+蒘	lùy	
+蔂	lùy	
+蕾	lùy	
+藘	lùy	
+蘲	lùy	
+虆	lùy	
+轠	lùy	
+鐳	lùy	
+鑘	lùy	
+閭	lùy	
+雷	lùy	
+靁	lùy	
+騾	lùy	
+驢	lùy	
+鱩	lùy	
+鷜	lùy	
+鼺	lùy	
+𣚎	lùy	
+𦌵	lùy	
+𨯔	lùy	
+㒦	lũy	
+㙼	lũy	
+㛎	lũy	
+㜢	lũy	
+㭚	lũy	
+㵽	lũy	
+㶟	lũy	
+㻲	lũy	
+㼍	lũy	
+㼏	lũy	
+㾔	lũy	
+㿔	lũy	
+䉂	lũy	
+䢮	lũy	
+䣂	lũy	
+䲎	lũy	
+䴎	lũy	
+侶	lũy	
+傫	lũy	
+僂	lũy	
+儡	lũy	
+儢	lũy	
+儽	lũy	
+厽	lũy	
+呂	lũy	
+垒	lũy	
+塁	lũy	
+壘	lũy	
+屢	lũy	
+履	lũy	
+挔	lũy	
+捛	lũy	
+旅	lũy	
+梠	lũy	
+櫐	lũy	
+櫑	lũy	
+漯	lũy	
+灅	lũy	
+焒	lũy	
+癗	lũy	
+磊	lũy	
+磥	lũy	
+礌	lũy	
+礨	lũy	
+祣	lũy	
+稆	lũy	
+穭	lũy	
+累	lũy	
+絫	lũy	
+絽	lũy	
+縷	lũy	
+纍	lũy	
+耒	lũy	
+腂	lũy	
+膂	lũy	
+膐	lũy	
+蕌	lũy	
+蕾	lũy	
+藟	lũy	
+蘽	lũy	
+蜼	lũy	
+蠝	lũy	
+裏	lũy	
+裡	lũy	
+褸	lũy	
+誄	lũy	
+謱	lũy	
+讄	lũy	
+郘	lũy	
+鋁	lũy	
+鑸	lũy	
+閭	lũy	
+頛	lũy	
+鸓	lũy	
+麿	lũy	
+𥚃	lũy	
+𧃒	lũy	
+㔣	lụy	
+㔧	lụy	
+㴃	lụy	
+䉪	lụy	
+䓞	lụy	
+䣦	lụy	
+䥨	lụy	
+䫫	lụy	
+䮉	lụy	
+䮑	lụy	
+勴	lụy	
+唳	lụy	
+彙	lụy	
+悷	lụy	
+慮	lụy	
+戾	lụy	
+捩	lụy	
+檑	lụy	
+櫖	lụy	
+沴	lụy	
+沵	lụy	
+洡	lụy	
+涙	lụy	
+淚	lụy	
+濾	lụy	
+瓃	lụy	
+盭	lụy	
+礌	lụy	
+礧	lụy	
+禷	lụy	
+累	lụy	
+纇	lụy	
+纍	lụy	
+耒	lụy	
+蘱	lụy	
+誄	lụy	
+酹	lụy	
+銇	lụy	
+錑	lụy	
+鑢	lụy	
+類	lụy	
+𧭜	lụy	
+𩸭	lụy	
 㖥	lun	
 噒	lun	
 卵	lủn	
