--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -13901,57 +13901,57 @@
 鵺	yẹ	
 影	yểnh	
 贏	yènh	
-嬃	yui	
-錐	yui	
-䅑	yùi	
-䬐	yùi	
-桵	yùi	
-甤	yùi	
-緌	yùi	
-蕤	yùi	
-擩	yũi	
-橤	yũi	
-緌	yũi	
-繠	yũi	
-蕊	yũi	
-蕋	yũi	
-蘂	yũi	
-蘃	yũi	
-㓹	yụi	
-㢻	yụi	
-㣸	yụi	
-㪫	yụi	
-㲊	yụi	
-㵝	yụi	
-㶋	yụi	
-㶙	yụi	
-㽔	yụi	
-䂱	yụi	
-䄲	yụi	
-䇤	yụi	
-䓲	yụi	
-兌	yụi	
-叡	yụi	
-壡	yụi	
-枘	yụi	
-梲	yụi	
-汭	yụi	
-睿	yụi	
-芮	yụi	
-蕊	yụi	
-蕤	yụi	
-蚋	yụi	
-蜹	yụi	
-裔	yụi	
-鈗	yụi	
-銳	yụi	
-銴	yụi	
-鋭	yụi	
-鏸	yụi	
-𠮏	yụi	
-𥈠	yụi	
-𥌑	yụi	
-𨧨	yụi	
+嬃	yuy	
+錐	yuy	
+䅑	yùy	
+䬐	yùy	
+桵	yùy	
+甤	yùy	
+緌	yùy	
+蕤	yùy	
+擩	yũy	
+橤	yũy	
+緌	yũy	
+繠	yũy	
+蕊	yũy	
+蕋	yũy	
+蘂	yũy	
+蘃	yũy	
+㓹	yụy	
+㢻	yụy	
+㣸	yụy	
+㪫	yụy	
+㲊	yụy	
+㵝	yụy	
+㶋	yụy	
+㶙	yụy	
+㽔	yụy	
+䂱	yụy	
+䄲	yụy	
+䇤	yụy	
+䓲	yụy	
+兌	yụy	
+叡	yụy	
+壡	yụy	
+枘	yụy	
+梲	yụy	
+汭	yụy	
+睿	yụy	
+芮	yụy	
+蕊	yụy	
+蕤	yụy	
+蚋	yụy	
+蜹	yụy	
+裔	yụy	
+鈗	yụy	
+銳	yụy	
+銴	yụy	
+鋭	yụy	
+鏸	yụy	
+𠮏	yụy	
+𥈠	yụy	
+𥌑	yụy	
+𨧨	yụy	
 膶	yủn	
 㠈	yụn	
 䏰	yụn	
