--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -10166,138 +10166,138 @@
 捖	quát	
 趏	quát	
 颳	quát	
-㰪	quay
-㱕	quay
-㻁	quay
-䅅	quay
-䆴	quay
-䢜	quay
-亀	quay
-傀	quay
-刲	quay
-圭	quay
-媯	quay
-嬀	quay
-帰	quay
-廆	quay
-櫷	quay
-歸	quay
-洼	quay
-溈	quay
-潙	quay
-珪	quay
-瑰	quay
-璝	quay
-瓌	quay
-皈	quay
-硅	quay
-胿	quay
-膭	quay
-茥	quay
-藈	quay
-袿	quay
-邽	quay
-郌	quay
-閨	quay
-騩	quay
-鮭	quay
-龜	quay
-𣵾	quay
-㔲	quảy
-㔳	quảy
-㧪	quảy
-㨳	quảy
-㲹	quảy
-㸵	quảy
-䃽	quảy
-䍯	quảy
-䣀	quảy
-䤥	quảy
-佹	quảy
-匭	quảy
-厬	quảy
-垝	quảy
-姽	quảy
-媿	quảy
-宄	quảy
-庋	quảy
-庪	quảy
-恑	quảy
-攱	quảy
-晷	quảy
-朹	quảy
-氿	quảy
-汣	quảy
-洈	quảy
-湀	quảy
-皀	quảy
-祪	quảy
-簋	quảy
-蛫	quảy
-觤	quảy
-詭	quảy
-軌	quảy
-陒	quảy
-鬼	quảy
-𣪕	quảy
-㑧	quáy
-㪈	quáy
-㳵	quáy
-㻑	quáy
-䁛	quáy
-䌆	quáy
-䝿	quáy
-䞈	quáy
-䣒	quáy
-䳏	quáy
-劌	quáy
-季	quáy
-嶡	quáy
-嶥	quáy
-悸	quáy
-撅	quáy
-昋	quáy
-暩	quáy
-桂	quáy
-溎	quáy
-炅	quáy
-炔	quáy
-猤	quáy
-瑰	quáy
-痵	quáy
-癸	quáy
-瞶	quáy
-聭	quáy
-蓕	quáy
-貴	quáy
-赽	quáy
-蹶	quáy
-饋	quáy
-騩	quáy
-鯚	quáy
-鱖	quáy
-鱥	quáy
-𡞳	quáy
-䕚	quạy
-䠏	quạy
-䠩	quạy
-匱	quạy
-悸	quạy
-撌	quạy
-柜	quạy
-樻	quạy
-櫃	quạy
-歸	quạy
-簣	quạy
-籄	quạy
-蕢	quạy
-跪	quạy
-鐀	quạy
-鑎	quạy
-闠	quạy
-鞼	quạy
-餽	quạy
-饋	quạy
+㰪	quy
+㱕	quy
+㻁	quy
+䅅	quy
+䆴	quy
+䢜	quy
+亀	quy
+傀	quy
+刲	quy
+圭	quy
+媯	quy
+嬀	quy
+帰	quy
+廆	quy
+櫷	quy
+歸	quy
+洼	quy
+溈	quy
+潙	quy
+珪	quy
+瑰	quy
+璝	quy
+瓌	quy
+皈	quy
+硅	quy
+胿	quy
+膭	quy
+茥	quy
+藈	quy
+袿	quy
+邽	quy
+郌	quy
+閨	quy
+騩	quy
+鮭	quy
+龜	quy
+𣵾	quy
+㔲	quỷ
+㔳	quỷ
+㧪	quỷ
+㨳	quỷ
+㲹	quỷ
+㸵	quỷ
+䃽	quỷ
+䍯	quỷ
+䣀	quỷ
+䤥	quỷ
+佹	quỷ
+匭	quỷ
+厬	quỷ
+垝	quỷ
+姽	quỷ
+媿	quỷ
+宄	quỷ
+庋	quỷ
+庪	quỷ
+恑	quỷ
+攱	quỷ
+晷	quỷ
+朹	quỷ
+氿	quỷ
+汣	quỷ
+洈	quỷ
+湀	quỷ
+皀	quỷ
+祪	quỷ
+簋	quỷ
+蛫	quỷ
+觤	quỷ
+詭	quỷ
+軌	quỷ
+陒	quỷ
+鬼	quỷ
+𣪕	quỷ
+㑧	quý
+㪈	quý
+㳵	quý
+㻑	quý
+䁛	quý
+䌆	quý
+䝿	quý
+䞈	quý
+䣒	quý
+䳏	quý
+劌	quý
+季	quý
+嶡	quý
+嶥	quý
+悸	quý
+撅	quý
+昋	quý
+暩	quý
+桂	quý
+溎	quý
+炅	quý
+炔	quý
+猤	quý
+瑰	quý
+痵	quý
+癸	quý
+瞶	quý
+聭	quý
+蓕	quý
+貴	quý
+赽	quý
+蹶	quý
+饋	quý
+騩	quý
+鯚	quý
+鱖	quý
+鱥	quý
+𡞳	quý
+䕚	quỵ
+䠏	quỵ
+䠩	quỵ
+匱	quỵ
+悸	quỵ
+撌	quỵ
+柜	quỵ
+樻	quỵ
+櫃	quỵ
+歸	quỵ
+簣	quỵ
+籄	quỵ
+蕢	quỵ
+跪	quỵ
+鐀	quỵ
+鑎	quỵ
+闠	quỵ
+鞼	quỵ
+餽	quỵ
+饋	quỵ
 𥕏	quặc	
 㚬	quân	
 㡓	quân	
@@ -17804,116 +17804,116 @@
 筐	khuanh	
 迋	khuánh	
 逛	khuánh	
-䂓	khuay
-䖯	khuay
-䯓	khuay
-䲅	khuay
-䶯	khuay
-刲	khuay
-奎	khuay
-嫢	khuay
-嶲	khuay
-巂	khuay
-巋	khuay
-摫	khuay
-晆	khuay
-楏	khuay
-槻	khuay
-槼	khuay
-湀	khuay
-盔	khuay
-睽	khuay
-瞡	khuay
-窺	khuay
-聧	khuay
-茥	khuay
-藈	khuay
-蘬	khuay
-虧	khuay
-規	khuay
-鍷	khuay
-闚	khuay
-雟	khuay
-鬹	khuay
-䞨	khuảy
-䠑	khuảy
-巋	khuảy
-煃	khuảy
-蘬	khuảy
-跬	khuảy
-蹞	khuảy
-頍	khuảy
-䯣	khuáy
-䰎	khuáy
-媿	khuáy
-尯	khuáy
-愧	khuáy
-歸	khuáy
-硊	khuáy
-觖	khuáy
-騩	khuáy
-㔒	khuày
-㙓	khuày
-㙺	khuày
-㩗	khuày
-㩦	khuày
-㽯	khuày
-䀘	khuày
-䕫	khuày
-䙵	khuày
-䟸	khuày
-䤆	khuày
-䥴	khuày
-䧶	khuày
-䳫	khuày
-喹	khuày
-夔	khuày
-奊	khuày
-戣	khuày
-揆	khuày
-携	khuày
-擕	khuày
-攜	khuày
-暌	khuày
-楑	khuày
-檇	khuày
-犪	khuày
-瓗	khuày
-畦	khuày
-睽	khuày
-纗	khuày
-聧	khuày
-葵	khuày
-蘷	khuày
-虁	khuày
-蠵	khuày
-觹	khuày
-觽	khuày
-觿	khuày
-讗	khuày
-躨	khuày
-逵	khuày
-鄈	khuày
-酅	khuày
-鍨	khuày
-鑴	khuày
-隗	khuày
-頄	khuày
-頯	khuày
-馗	khuày
-騤	khuày
-驨	khuày
-𡋣	khuày
-𡖂	khuày
-𢹂	khuày
-𣋒	khuày
-𣿮	khuày
-𤩸	khuày
-𧃍	khuày
-𧤤	khuày
-𩓚	khuày
-𪆴	khuày
-䕫	khuày
+䂓	khuy
+䖯	khuy
+䯓	khuy
+䲅	khuy
+䶯	khuy
+刲	khuy
+奎	khuy
+嫢	khuy
+嶲	khuy
+巂	khuy
+巋	khuy
+摫	khuy
+晆	khuy
+楏	khuy
+槻	khuy
+槼	khuy
+湀	khuy
+盔	khuy
+睽	khuy
+瞡	khuy
+窺	khuy
+聧	khuy
+茥	khuy
+藈	khuy
+蘬	khuy
+虧	khuy
+規	khuy
+鍷	khuy
+闚	khuy
+雟	khuy
+鬹	khuy
+䞨	khủy
+䠑	khủy
+巋	khủy
+煃	khủy
+蘬	khủy
+跬	khủy
+蹞	khủy
+頍	khủy
+䯣	khúy
+䰎	khúy
+媿	khúy
+尯	khúy
+愧	khúy
+歸	khúy
+硊	khúy
+觖	khúy
+騩	khúy
+㔒	khùy
+㙓	khùy
+㙺	khùy
+㩗	khùy
+㩦	khùy
+㽯	khùy
+䀘	khùy
+䕫	khùy
+䙵	khùy
+䟸	khùy
+䤆	khùy
+䥴	khùy
+䧶	khùy
+䳫	khùy
+喹	khùy
+夔	khùy
+奊	khùy
+戣	khùy
+揆	khùy
+携	khùy
+擕	khùy
+攜	khùy
+暌	khùy
+楑	khùy
+檇	khùy
+犪	khùy
+瓗	khùy
+畦	khùy
+睽	khùy
+纗	khùy
+聧	khùy
+葵	khùy
+蘷	khùy
+虁	khùy
+蠵	khùy
+觹	khùy
+觽	khùy
+觿	khùy
+讗	khùy
+躨	khùy
+逵	khùy
+鄈	khùy
+酅	khùy
+鍨	khùy
+鑴	khùy
+隗	khùy
+頄	khùy
+頯	khùy
+馗	khùy
+騤	khùy
+驨	khùy
+𡋣	khùy
+𡖂	khùy
+𢹂	khùy
+𣋒	khùy
+𣿮	khùy
+𤩸	khùy
+𧃍	khùy
+𧤤	khùy
+𩓚	khùy
+𪆴	khùy
+䕫	khùy
 㟡	khuãi	
 媿	khuãi	
 愧	khuãi	
