--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -10538,7 +10538,7 @@
 顈	quỷnh	
 𥺂	quỷnh	
 澃	quýnh	
-𠵯	qôiêt	
+𠵯	quyt	
 㽿	quo	
 㿆	quo	
 咼	quo	
@@ -18026,21 +18026,21 @@
 蔨	khuẫn	
 蜠	khuẫn	
 㚚	khuăng	
-䠐	khôich
-䱛	khôich
-侐	khôich
-掝	khôich
-洫	khôich
-淢	khôich
-烅	khôich
-綌	khôich
-郄	khôich
-郤	khôich
-郥	khôich
-閾	khôich
-闃	khôich
-隙	khôich
-隟	khôich
+䠐	khuych
+䱛	khuych
+侐	khuych
+掝	khuych
+洫	khuych
+淢	khuych
+烅	khuych
+綌	khuych
+郄	khuych
+郤	khuych
+郥	khuych
+閾	khuych
+闃	khuych
+隙	khuych
+隟	khuych
 㗥	khuóc	
 㨯	khuóc	
 廓	khuóc	
