--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -3,7 +3,7 @@
 #author: cathaylab
 𢶹	ầm	
 𣍐	múi	
-噶	kớ	
+噶	kớ/cớ	
 嘞	lớ	
 𨋢	liêp	
 𥒻	bet	
@@ -2064,293 +2064,293 @@
 奉	phùng	
 俸	phùng	
 闊	phốt	
-旮	ka	
-伽	ka	
-釓	ka	
-噶	ka	
-尕	ka	
-加	ka	
-迦	ka	
-珈	ka	
-枷	ka	
-痂	ka	
-家	ka	
-傢	ka	
-鎵	ka	
-笳	ka	
-袈	ka	
-葭	ka	
-椵	ka	
-嘉	ka	
-賈	kả	
-假	kả	
-椵	kả	
-斝	kả	
-檟	kả	
-噶	ká	
-假	ká	
-椵	ká	
-價	ká	
-駕	ká	
-架	ká	
-㗎	ká	
-嫁	ká	
-稼	ká	
-咖	ká	
-架	kà	
-𢱌	kà	
-佳	kai	
-階	kai	
-皆	kai	
-街	kai	
-楷	kai	
-鍇	kai	
-偕	kai	
-解	kải	
-尬	kái	
-解	kái	
-介	kái	
-戒	kái	
-芥	kái	
-玠	kái	
-屆	kái	
-界	kái	
-疥	kái	
-誡	kái	
-蚧	kái	
-刏	kái	
-𠝹	kái	
-鎅	kái	
-价	kái	
-胳	kách	
-革	kách	
-格	kách	
-鬲	kách	
-隔	kách	
-嗝	kách	
-滆	kách	
-膈	kách	
-骼	kách	
-鎘	kách	
-甘	kam	
-苷	kam	
-泔	kam	
-柑	kam	
-疳	kam	
-監	kam	
-緘	kam	
-敢	kảm	
-感	kảm	
-橄	kảm	
-鱤	kảm	
-減	kảm	
-鹼	kảm	
-尷	kám	
-紺	kám	
-監	kám	
-鑒	kám	
-鑑	kám	
-奸	kan	
-姦	kan	
-靬	kan	
-間	kan	
-艱	kan	
-菅	kan	
-碱	kản	
-𨣇	kản	
-梘	kản	
-揀	kản	
-繭	kản	
-柬	kản	
-筧	kản	
-趼	kản	
-簡	kản	
-鐧	kản	
-間	kán	
-襉	kán	
-澗	kán	
-諫	kán	
-𣴓	kàn	
-㴓	kàn	
-庚	kanh	
-賡	kanh	
-耕	kanh	
-羹	kanh	
-更	kanh	
-挭	kánh	
-鴿	káp	
-蛤	káp	
-佮	káp	
-合	káp	
-餄	káp	
-袷	káp	
-搿	káp	
-甲	káp	
-岬	káp	
-胛	káp	
-鉀	káp	
-戛	kát	
-交	kao	
-郊	kao	
-茭	kao	
-膠	kao	
-蛟	kao	
-跤	kao	
-鮫	kao	
-峧	kao	
-搞	kảo	
-縞	kảo	
-槁	kảo	
-鎬	kảo	
-稿	kảo	
-姣	kảo	
-佼	kảo	
-狡	kảo	
-餃	kảo	
-絞	kảo	
-鉸	kảo	
-皎	kảo	
-攪	kảo	
-骹	káo	
-鉸	káo	
-較	káo	
-教	káo	
-窖	káo	
-滘	káo	
-校	káo	
-攪	kào	
-雞	kay	
-膎	kay	
-鐖	kay	
-計	káy	
-繼	káy	
-繫	káy	
-薊	káy	
-髻	káy	
-罽	káy	
-偈	kày	
-硌	kặc	
-今	kâm	
-金	kâm	
-禁	kâm	
-噉	kẩm	
-咁	kẩm	
-錦	kẩm	
-淦	kấm	
-贛	kấm	
-禁	kấm	
-凚	kấm	
-噤	kấm	
-扲	kầm	
-撳	kầm	
-根	kân	
-跟	kân	
-哏	kân	
-巾	kân	
-斤	kân	
-筋	kân	
-僅	kẩn	
-緊	kẩn	
-堇	kẩn	
-謹	kẩn	
-饉	kẩn	
-瑾	kẩn	
-槿	kẩn	
-卺	kẩn	
-𫝎	kấn	
-艮	kấn	
-靳	kấn	
-覲	kấn	
-近	kần	
-庚	kăng	
-緪	kăng	
-更	kăng	
-粳	kăng	
-亙	kẳng	
-埂	kẳng	
-耿	kẳng	
-哽	kẳng	
-鯁	kẳng	
-骾	kẳng	
-梗	kẳng	
-更	kắng	
-蛤	kâp	
-急	kâp	
-𥄫	kập	
-及	kập	
-紇	kât	
-虼	kât	
-吃	kât	
-吉	kât	
-佶	kât	
-秸	kât	
-詰	kât	
-㓤	kât	
-橘	kât	
-桔	kât	
-嘎	kật	
-疙	kật	
-胳	kật	
-竭	kật	
-揭	kật	
-𧽸	kật	
-䞘	kật	
-趷	kật	
-趌	kật	
-曱	kật	
-皋	kâu	
-高	kâu	
-羔	kâu	
-睾	kâu	
-膏	kâu	
-篙	kâu	
-糕	kâu	
-勾	kâu	
-佝	kâu	
-溝	kâu	
-鉤	kâu	
-篝	kâu	
-龜	kâu	
-鳩	kâu	
-鬮	kâu	
-痀	kâu	
-句	kâu	
-尻	kâu	
-㞗	kâu	
-杲	kẩu	
-藁	kẩu	
-𧎸	kẩu	
-苟	kẩu	
-狗	kẩu	
-耇	kẩu	
-枸	kẩu	
-笱	kẩu	
-糾	kẩu	
-九	kẩu	
-久	kẩu	
-玖	kẩu	
-韭	kẩu	
-告	kấu	
-郜	kấu	
-誥	kấu	
-鋯	kấu	
-構	kấu	
-購	kấu	
-詬	kấu	
-垢	kấu	
-夠	kấu	
-媾	kấu	
-覯	kấu	
-究	kấu	
-灸	kấu	
-咎	kấu	
-疚	kấu	
-柩	kấu	
-救	kấu	
-廄	kấu	
-𢜴	kầu	
-舊	kầu	
-䊆	kầu	
+旮	ka/ca	
+伽	ka/ca	
+釓	ka/ca	
+噶	ka/ca	
+尕	ka/ca	
+加	ka/ca	
+迦	ka/ca	
+珈	ka/ca	
+枷	ka/ca	
+痂	ka/ca	
+家	ka/ca	
+傢	ka/ca	
+鎵	ka/ca	
+笳	ka/ca	
+袈	ka/ca	
+葭	ka/ca	
+椵	ka/ca	
+嘉	ka/ca	
+賈	kả/cả	
+假	kả/cả	
+椵	kả/cả	
+斝	kả/cả	
+檟	kả/cả	
+噶	ká/cá	
+假	ká/cá	
+椵	ká/cá	
+價	ká/cá	
+駕	ká/cá	
+架	ká/cá	
+㗎	ká/cá	
+嫁	ká/cá	
+稼	ká/cá	
+咖	ká/cá	
+架	kà/cà	
+𢱌	kà/cà	
+佳	kai/cai	
+階	kai/cai	
+皆	kai/cai	
+街	kai/cai	
+楷	kai/cai	
+鍇	kai/cai	
+偕	kai/cai	
+解	kải/cải	
+尬	kái/cái	
+解	kái/cái	
+介	kái/cái	
+戒	kái/cái	
+芥	kái/cái	
+玠	kái/cái	
+屆	kái/cái	
+界	kái/cái	
+疥	kái/cái	
+誡	kái/cái	
+蚧	kái/cái	
+刏	kái/cái	
+𠝹	kái/cái	
+鎅	kái/cái	
+价	kái/cái	
+胳	kách/cách	
+革	kách/cách	
+格	kách/cách	
+鬲	kách/cách	
+隔	kách/cách	
+嗝	kách/cách	
+滆	kách/cách	
+膈	kách/cách	
+骼	kách/cách	
+鎘	kách/cách	
+甘	kam/cam	
+苷	kam/cam	
+泔	kam/cam	
+柑	kam/cam	
+疳	kam/cam	
+監	kam/cam	
+緘	kam/cam	
+敢	kảm/cảm	
+感	kảm/cảm	
+橄	kảm/cảm	
+鱤	kảm/cảm	
+減	kảm/cảm	
+鹼	kảm/cảm	
+尷	kám/cám	
+紺	kám/cám	
+監	kám/cám	
+鑒	kám/cám	
+鑑	kám/cám	
+奸	kan/can	
+姦	kan/can	
+靬	kan/can	
+間	kan/can	
+艱	kan/can	
+菅	kan/can	
+碱	kản/cản	
+𨣇	kản/cản	
+梘	kản/cản	
+揀	kản/cản	
+繭	kản/cản	
+柬	kản/cản	
+筧	kản/cản	
+趼	kản/cản	
+簡	kản/cản	
+鐧	kản/cản	
+間	kán/cán	
+襉	kán/cán	
+澗	kán/cán	
+諫	kán/cán	
+𣴓	kàn/càn	
+㴓	kàn/càn	
+庚	kanh/canh	
+賡	kanh/canh	
+耕	kanh/canh	
+羹	kanh/canh	
+更	kanh/canh	
+挭	kánh/cánh	
+鴿	káp/cáp	
+蛤	káp/cáp	
+佮	káp/cáp	
+合	káp/cáp	
+餄	káp/cáp	
+袷	káp/cáp	
+搿	káp/cáp	
+甲	káp/cáp	
+岬	káp/cáp	
+胛	káp/cáp	
+鉀	káp/cáp	
+戛	kát/cát	
+交	kao/cao	
+郊	kao/cao	
+茭	kao/cao	
+膠	kao/cao	
+蛟	kao/cao	
+跤	kao/cao	
+鮫	kao/cao	
+峧	kao/cao	
+搞	kảo/cảo	
+縞	kảo/cảo	
+槁	kảo/cảo	
+鎬	kảo/cảo	
+稿	kảo/cảo	
+姣	kảo/cảo	
+佼	kảo/cảo	
+狡	kảo/cảo	
+餃	kảo/cảo	
+絞	kảo/cảo	
+鉸	kảo/cảo	
+皎	kảo/cảo	
+攪	kảo/cảo	
+骹	káo/cáo	
+鉸	káo/cáo	
+較	káo/cáo	
+教	káo/cáo	
+窖	káo/cáo	
+滘	káo/cáo	
+校	káo/cáo	
+攪	kào/cào	
+雞	kay/cay	
+膎	kay/cay	
+鐖	kay/cay	
+計	káy/cáy	
+繼	káy/cáy	
+繫	káy/cáy	
+薊	káy/cáy	
+髻	káy/cáy	
+罽	káy/cáy	
+偈	kày/cày	
+硌	kặc/cặc	
+今	kâm/câm	
+金	kâm/câm	
+禁	kâm/câm	
+噉	kẩm/cẩm	
+咁	kẩm/cẩm	
+錦	kẩm/cẩm	
+淦	kấm/cấm	
+贛	kấm/cấm	
+禁	kấm/cấm	
+凚	kấm/cấm	
+噤	kấm/cấm	
+扲	kầm/cầm	
+撳	kầm/cầm	
+根	kân/cân	
+跟	kân/cân	
+哏	kân/cân	
+巾	kân/cân	
+斤	kân/cân	
+筋	kân/cân	
+僅	kẩn/cẩn	
+緊	kẩn/cẩn	
+堇	kẩn/cẩn	
+謹	kẩn/cẩn	
+饉	kẩn/cẩn	
+瑾	kẩn/cẩn	
+槿	kẩn/cẩn	
+卺	kẩn/cẩn	
+𫝎	kấn/cấn	
+艮	kấn/cấn	
+靳	kấn/cấn	
+覲	kấn/cấn	
+近	kần/cần	
+庚	kăng/căng	
+緪	kăng/căng	
+更	kăng/căng	
+粳	kăng/căng	
+亙	kẳng/cẳng	
+埂	kẳng/cẳng	
+耿	kẳng/cẳng	
+哽	kẳng/cẳng	
+鯁	kẳng/cẳng	
+骾	kẳng/cẳng	
+梗	kẳng/cẳng	
+更	kắng/cắng	
+蛤	kâp/câp	
+急	kâp/câp	
+𥄫	kập/cập	
+及	kập/cập	
+紇	kât/cât	
+虼	kât/cât	
+吃	kât/cât	
+吉	kât/cât	
+佶	kât/cât	
+秸	kât/cât	
+詰	kât/cât	
+㓤	kât/cât	
+橘	kât/cât	
+桔	kât/cât	
+嘎	kật/cật	
+疙	kật/cật	
+胳	kật/cật	
+竭	kật/cật	
+揭	kật/cật	
+𧽸	kật/cật	
+䞘	kật/cật	
+趷	kật/cật	
+趌	kật/cật	
+曱	kật/cật	
+皋	kâu/câu	
+高	kâu/câu	
+羔	kâu/câu	
+睾	kâu/câu	
+膏	kâu/câu	
+篙	kâu/câu	
+糕	kâu/câu	
+勾	kâu/câu	
+佝	kâu/câu	
+溝	kâu/câu	
+鉤	kâu/câu	
+篝	kâu/câu	
+龜	kâu/câu	
+鳩	kâu/câu	
+鬮	kâu/câu	
+痀	kâu/câu	
+句	kâu/câu	
+尻	kâu/câu	
+㞗	kâu/câu	
+杲	kẩu/cẩu	
+藁	kẩu/cẩu	
+𧎸	kẩu/cẩu	
+苟	kẩu/cẩu	
+狗	kẩu/cẩu	
+耇	kẩu/cẩu	
+枸	kẩu/cẩu	
+笱	kẩu/cẩu	
+糾	kẩu/cẩu	
+九	kẩu/cẩu	
+久	kẩu/cẩu	
+玖	kẩu/cẩu	
+韭	kẩu/cẩu	
+告	kấu/cấu	
+郜	kấu/cấu	
+誥	kấu/cấu	
+鋯	kấu/cấu	
+構	kấu/cấu	
+購	kấu/cấu	
+詬	kấu/cấu	
+垢	kấu/cấu	
+夠	kấu/cấu	
+媾	kấu/cấu	
+覯	kấu/cấu	
+究	kấu/cấu	
+灸	kấu/cấu	
+咎	kấu/cấu	
+疚	kấu/cấu	
+柩	kấu/cấu	
+救	kấu/cấu	
+廄	kấu/cấu	
+𢜴	kầu/cầu	
+舊	kầu/cầu	
+䊆	kầu/cầu	
 嘅	ké	
 譤	kêc	
 劇	kệc	
@@ -2551,128 +2551,128 @@
 繳	kiểu	
 叫	kiếu	
 轎	kiều	
-哥	ko	
-歌	ko	
-仡	ko	
-舸	kỏ	
-嗰	kó	
-個	kó	
-箇	kó	
-腳	kước	
-薑	kương	
-姜	kương	
-僵	kương	
-殭	kương	
-韁	kương	
-礓	kương	
-疆	kương	
-繮	kương	
-羌	kương	
-蜣	kương	
-蔃	kưởng	
-糨	kường	
-唴	kường	
-該	koi	
-垓	koi	
-賅	koi	
-改	kỏi	
-丐	kói	
-蓋	kói	
-咯	koc	
-玨	kóc	
-閣	kóc	
-擱	kóc	
-各	kóc	
-鉻	kóc	
-角	kóc	
-珏	kóc	
-桷	kóc	
-傕	kóc	
-肝	kon	
-竿	kon	
-酐	kon	
-杆	kon	
-乾	kon	
-干	kon	
-桿	kỏn	
-秆	kỏn	
-趕	kỏn	
-擀	kỏn	
-幹	kón	
-旰	kón	
-岡	kong	
-剛	kong	
-肛	kong	
-綱	kong	
-缸	kong	
-罡	kong	
-釭	kong	
-堽	kong	
-崗	kong	
-江	kong	
-豇	kong	
-扛	kong	
-港	kỏng	
-講	kỏng	
-鋼	kóng	
-槓	kóng	
-降	kóng	
-絳	kóng	
-割	kót	
-葛	kót	
-𣢯	kọt	
-估	ku	
-咕	ku	
-沽	ku	
-孤	ku	
-姑	ku	
-軲	ku	
-鴣	ku	
-菰	ku	
-菇	ku	
-蛄	ku	
-辜	ku	
-酤	ku	
-觚	ku	
-胍	ku	
-估	kủ	
-古	kủ	
-詁	kủ	
-股	kủ	
-牯	kủ	
-罟	kủ	
-鈷	kủ	
-䀇	kủ	
-蠱	kủ	
-鼓	kủ	
-瞽	kủ	
-賈	kủ	
-估	kú	
-固	kú	
-故	kú	
-顧	kú	
-崮	kú	
-僱	kú	
-錮	kú	
-痼	kú	
-鯝	kú	
-䠩	kùi	
-攰	kùi	
-癐	kùi	
-轂	kuc	
-穀	kuc	
-谷	kuc	
-榖	kuc	
-梏	kuc	
-鵠	kuc	
-掬	kuc	
-鞠	kuc	
-菊	kuc	
-喾	kuc	
-嚳	kuc	
-鋦	kục	
-局	kục	
-焗	kục	
+哥	ko/co	
+歌	ko/co	
+仡	ko/co	
+舸	kỏ/cỏ	
+嗰	kó/có	
+個	kó/có	
+箇	kó/có	
+腳	kước/cước	
+薑	kương/cương	
+姜	kương/cương	
+僵	kương/cương	
+殭	kương/cương	
+韁	kương/cương	
+礓	kương/cương	
+疆	kương/cương	
+繮	kương/cương	
+羌	kương/cương	
+蜣	kương/cương	
+蔃	kưởng/cưởng	
+糨	kường/cường	
+唴	kường/cường	
+該	koi/coi	
+垓	koi/coi	
+賅	koi/coi	
+改	kỏi/cỏi	
+丐	kói/cói	
+蓋	kói/cói	
+咯	koc/coc	
+玨	kóc/cóc	
+閣	kóc/cóc	
+擱	kóc/cóc	
+各	kóc/cóc	
+鉻	kóc/cóc	
+角	kóc/cóc	
+珏	kóc/cóc	
+桷	kóc/cóc	
+傕	kóc/cóc	
+肝	kon/con	
+竿	kon/con	
+酐	kon/con	
+杆	kon/con	
+乾	kon/con	
+干	kon/con	
+桿	kỏn/cỏn	
+秆	kỏn/cỏn	
+趕	kỏn/cỏn	
+擀	kỏn/cỏn	
+幹	kón/cón	
+旰	kón/cón	
+岡	kong/cong	
+剛	kong/cong	
+肛	kong/cong	
+綱	kong/cong	
+缸	kong/cong	
+罡	kong/cong	
+釭	kong/cong	
+堽	kong/cong	
+崗	kong/cong	
+江	kong/cong	
+豇	kong/cong	
+扛	kong/cong	
+港	kỏng/cỏng	
+講	kỏng/cỏng	
+鋼	kóng/cóng	
+槓	kóng/cóng	
+降	kóng/cóng	
+絳	kóng/cóng	
+割	kót/cót	
+葛	kót/cót	
+𣢯	kọt/cọt	
+估	ku/cu	
+咕	ku/cu	
+沽	ku/cu	
+孤	ku/cu	
+姑	ku/cu	
+軲	ku/cu	
+鴣	ku/cu	
+菰	ku/cu	
+菇	ku/cu	
+蛄	ku/cu	
+辜	ku/cu	
+酤	ku/cu	
+觚	ku/cu	
+胍	ku/cu	
+估	kủ/củ	
+古	kủ/củ	
+詁	kủ/củ	
+股	kủ/củ	
+牯	kủ/củ	
+罟	kủ/củ	
+鈷	kủ/củ	
+䀇	kủ/củ	
+蠱	kủ/củ	
+鼓	kủ/củ	
+瞽	kủ/củ	
+賈	kủ/củ	
+估	kú/cú	
+固	kú/cú	
+故	kú/cú	
+顧	kú/cú	
+崮	kú/cú	
+僱	kú/cú	
+錮	kú/cú	
+痼	kú/cú	
+鯝	kú/cú	
+䠩	kùi/cùi	
+攰	kùi/cùi	
+癐	kùi/cùi	
+轂	kuc/cuc	
+穀	kuc/cuc	
+谷	kuc/cuc	
+榖	kuc/cuc	
+梏	kuc/cuc	
+鵠	kuc/cuc	
+掬	kuc/cuc	
+鞠	kuc/cuc	
+菊	kuc/cuc	
+喾	kuc/cuc	
+嚳	kuc/cuc	
+鋦	kục/cục	
+局	kục/cục	
+焗	kục/cục	
 觀	quôn	
 官	quôn	
 倌	quôn	
@@ -2689,39 +2689,39 @@
 灌	quốn	
 鸛	quốn	
 罐	quốn	
-芎	kung	
-矼	kung	
-釭	kung	
-工	kung	
-弓	kung	
-公	kung	
-功	kung	
-攻	kung	
-宮	kung	
-恭	kung	
-蚣	kung	
-躬	kung	
-龔	kung	
-供	kung	
-巩	kủng	
-鞏	kủng	
-㧬	kủng	
-汞	kủng	
-澒	kủng	
-拱	kủng	
-珙	kủng	
-䱋	kủng	
-嗊	kúng	
-贛	kúng	
-㔶	kúng	
-汞	kúng	
-澒	kúng	
-貢	kúng	
-供	kúng	
-𫋐	kúng	
-共	kùng	
-供	kùng	
-矼	kùng	
+芎	kung/cung	
+矼	kung/cung	
+釭	kung/cung	
+工	kung/cung	
+弓	kung/cung	
+公	kung/cung	
+功	kung/cung	
+攻	kung/cung	
+宮	kung/cung	
+恭	kung/cung	
+蚣	kung/cung	
+躬	kung/cung	
+龔	kung/cung	
+供	kung/cung	
+巩	kủng/củng	
+鞏	kủng/củng	
+㧬	kủng/củng	
+汞	kủng/củng	
+澒	kủng/củng	
+拱	kủng/củng	
+珙	kủng/củng	
+䱋	kủng/củng	
+嗊	kúng/cúng	
+贛	kúng/cúng	
+㔶	kúng/cúng	
+汞	kúng/cúng	
+澒	kúng/cúng	
+貢	kúng/cúng	
+供	kúng/cúng	
+𫋐	kúng/cúng	
+共	kùng/cùng	
+供	kùng/cùng	
+矼	kùng/cùng	
 瓜	qua	
 呱	qua	
 胍	qua	
