--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -2730,8 +2730,8 @@
 靑	xênh	
 青	xênh	
 請	xểnh	
-夝	xènh	
-晴	xènh	
+夝	xềnh	
+晴	xềnh	
 㜠	xui
 㸖	xui
 㿐	xui
@@ -13900,7 +13900,7 @@
 廿	yẹ	
 鵺	yẹ	
 影	yểnh	
-贏	yènh	
+贏	yềnh	
 嬃	yui	
 錐	yui	
 䅑	yùi	
@@ -18990,8 +18990,8 @@
 𡃁	lênh	
 領	lểnh	
 靚	lếnh	
-靈	lènh	
-鯪	lènh	
+靈	lềnh	
+鯪	lềnh	
 岭	lễnh	
 嶺	lễnh	
 領	lễnh	
@@ -21510,7 +21510,7 @@
 𥧌	mỵ	
 𧙕	mỵ	
 名	mểnh	
-名	mènh	
+名	mềnh	
 命	mệnh	
 喵	meo	
 咪	mi	
@@ -23854,7 +23854,7 @@
 啊	ó	
 哦	ò	
 哦	ọ	
-𠰲	ươt	
+𠰲	ut	
 㗒	oi	
 哀	oi	
 唉	oi	
@@ -24446,8 +24446,8 @@
 𣖕	pênh	
 𩩍	pênh	
 𠝭	pểnh	
-平	pènh	
-瓶	pènh	
+平	pềnh	
+瓶	pềnh	
 噼	pet	
 坺	pẹt	
 㱸	pich
@@ -25970,8 +25970,8 @@
 腥	sếnh	
 鉎	sếnh	
 鍟	sếnh	
-城	sènh	
-成	sènh	
+城	sềnh	
+成	sềnh	
 㥠	suy
 㲤	suy
 䇓	suy
