--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -11884,82 +11884,82 @@
 黝	yửu	
 唷	yỏ	
 喲	yỏ	
-圓	yõn	
-丸	yòn	
-元	yòn	
-員	yòn	
-園	yòn	
-圓	yòn	
-圜	yòn	
-媛	yòn	
-媴	yòn	
-完	yòn	
-懸	yòn	
-援	yòn	
-椽	yòn	
-櫞	yòn	
-沿	yòn	
-泫	yòn	
-湲	yòn	
-溳	yòn	
-炫	yòn	
-烷	yòn	
-爰	yòn	
-猨	yòn	
-猿	yòn	
-玄	yòn	
-瑗	yòn	
-眩	yòn	
-紈	yòn	
-緣	yòn	
-芄	yòn	
-芫	yòn	
-蝯	yòn	
-衒	yòn	
-袁	yòn	
-轅	yòn	
-鈆	yòn	
-鉛	yòn	
-魭	yòn	
-鶢	yòn	
-黿	yòn	
+圓	oãn	
+丸	oàn	
+元	oàn	
+員	oàn	
+園	oàn	
+圓	oàn	
+圜	oàn	
+媛	oàn	
+媴	oàn	
+完	oàn	
+懸	oàn	
+援	oàn	
+椽	oàn	
+櫞	oàn	
+沿	oàn	
+泫	oàn	
+湲	oàn	
+溳	oàn	
+炫	oàn	
+烷	oàn	
+爰	oàn	
+猨	oàn	
+猿	oàn	
+玄	oàn	
+瑗	oàn	
+眩	oàn	
+紈	oàn	
+緣	oàn	
+芄	oàn	
+芫	oàn	
+蝯	oàn	
+衒	oàn	
+袁	oàn	
+轅	oàn	
+鈆	oàn	
+鉛	oàn	
+魭	oàn	
+鶢	oàn	
+黿	oàn	
 垸	yọn	
 掾	yọn	
 縣	yọn	
 遠	yọn	
 院	yọn	
-冤	yón	
-宛	yón	
-怨	yón	
-淵	yón	
-眢	yón	
-箢	yón	
-裷	yón	
-鳶	yón	
-鴛	yón	
-鵷	yón	
-兗	yỏn	
-遠	yỏn	
+冤	oán	
+宛	oán	
+怨	oán	
+淵	oán	
+眢	oán	
+箢	oán	
+裷	oán	
+鳶	oán	
+鴛	oán	
+鵷	oán	
+兗	oản	
+遠	oản	
 戎	yòng	
-噦	yọt	
-岤	yọt	
-悅	yọt	
-曰	yọt	
-樾	yọt	
-穴	yọt	
-篗	yọt	
-籆	yọt	
-籰	yọt	
-粵	yọt	
-茓	yọt	
-說	yọt	
-越	yọt	
-軏	yọt	
-鉞	yọt	
-閱	yọt	
-㧒	yọt	
-乙	yot	
-釔	yot	
+噦	oạt	
+岤	oạt	
+悅	oạt	
+曰	oạt	
+樾	oạt	
+穴	oạt	
+篗	oạt	
+籆	oạt	
+籰	oạt	
+粵	oạt	
+茓	oạt	
+說	oạt	
+越	oạt	
+軏	oạt	
+鉞	oạt	
+閱	oạt	
+㧒	oạt	
+乙	oat	
+釔	oat	
 叡	yụi	
 枘	yụi	
 汭	yụi	
