--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -11414,46 +11414,46 @@
 龥	yệc	
 約	yếc	
 約	yêc	
-鷂	yiễu	
-傜	yiều	
-垚	yiều	
-姚	yiều	
-徭	yiều	
-搖	yiều	
-珧	yiều	
-瑤	yiều	
-窯	yiều	
-窰	yiều	
-繇	yiều	
-脁	yiều	
-謠	yiều	
-軺	yiều	
-遙	yiều	
-銚	yiều	
-陶	yiều	
-颻	yiều	
-鰩	yiều	
-曜	yiệu	
-耀	yiệu	
-㿢	yiệu	
-么	yiếu	
-吆	yiếu	
-崾	yiếu	
-幺	yiếu	
-徼	yiếu	
-穾	yiếu	
-約	yiếu	
-腰	yiếu	
-要	yiếu	
-邀	yiếu	
-靿	yiếu	
-夭	yiểu	
-妖	yiểu	
-抌	yiểu	
-窅	yiểu	
-窈	yiểu	
-舀	yiểu	
-黝	yiểu	
+鷂	yễu	
+傜	yều	
+垚	yều	
+姚	yều	
+徭	yều	
+搖	yều	
+珧	yều	
+瑤	yều	
+窯	yều	
+窰	yều	
+繇	yều	
+脁	yều	
+謠	yều	
+軺	yều	
+遙	yều	
+銚	yều	
+陶	yều	
+颻	yều	
+鰩	yều	
+曜	yệu	
+耀	yệu	
+㿢	yệu	
+么	yếu	
+吆	yếu	
+崾	yếu	
+幺	yếu	
+徼	yếu	
+穾	yếu	
+約	yếu	
+腰	yếu	
+要	yếu	
+邀	yếu	
+靿	yếu	
+夭	yểu	
+妖	yểu	
+抌	yểu	
+窅	yểu	
+窈	yểu	
+舀	yểu	
+黝	yểu	
 嫌	yiềm	
 閆	yiềm	
 閻	yiềm	
