--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -5884,56 +5884,56 @@
 抴	(又)yiệt	
 拽	(又)yiệt	
 熱	yiệt	
-㙘	yiêu	
-么	yiêu	
-吆	yiêu	
-喓	yiêu	
-夭	yiêu	
-妖	yiêu	
-幺	yiêu	
-徼	yiêu	
-腰	yiêu	
-要	yiêu	
-邀	yiêu	
-扰	yiểu	
-擾	yiểu	
-杳	(又)yiểu	
-窅	yiểu	
-窈	(又)yiểu	
-繞	yiểu	
-要	yiếu	
-僥	yiều	
-垚	yiều	
-姚	yiều	
-嬈	yiều	
-媱	yiều	
-堯	yiều	
-嶢	yiều	
-徭	yiều	
-搖	yiều	
-橈	yiều	
-洮	yiều	
-猺	yiều	
-珧	yiều	
-瑤	yiều	
-窯	yiều	
-繇	yiều	
-蕘	yiều	
-蟯	yiều	
-謠	yiều	
-軺	yiều	
-遙	yiều	
-銚	yiều	
-陶	yiều	
-颻	yiều	
-饒	yiều	
-鰩	yiều	
-崾	yiễu	
-舀	yiễu	
-曜	yiệu	
-燿	yiệu	
-耀	yiệu	
-鷂	yiệu	
+㙘	yêu	
+么	yêu	
+吆	yêu	
+喓	yêu	
+夭	yêu	
+妖	yêu	
+幺	yêu	
+徼	yêu	
+腰	yêu	
+要	yêu	
+邀	yêu	
+扰	yểu	
+擾	yểu	
+杳	(又)yểu	
+窅	yểu	
+窈	(又)yểu	
+繞	yểu	
+要	yếu	
+僥	yều	
+垚	yều	
+姚	yều	
+嬈	yều	
+媱	yều	
+堯	yều	
+嶢	yều	
+徭	yều	
+搖	yều	
+橈	yều	
+洮	yều	
+猺	yều	
+珧	yều	
+瑤	yều	
+窯	yều	
+繇	yều	
+蕘	yều	
+蟯	yều	
+謠	yều	
+軺	yều	
+遙	yều	
+銚	yều	
+陶	yều	
+颻	yều	
+饒	yều	
+鰩	yều	
+崾	yễu	
+舀	yễu	
+曜	yệu	
+燿	yệu	
+耀	yệu	
+鷂	yệu	
 喲	yo	
 唷	yo	
 喲	(語)yỏ	
@@ -6274,33 +6274,33 @@
 遇	yự	
 預	yự	
 馭	yự	
-㾓	yoan	
-冤	yoan	
-宛	yoan	
-涴	yoan	
-淵	yoan	
-渕	yoan	
-眢	yoan	
-箢	yoan	
-葾	yoan	
-蜎	yoan	
-蜿	yoan	
-身	yoan	
-鳶	yoan	
-鴛	yoan	
-鵷	yoan	
-䩩	yoản	
-縣	(白)yoản	
-夗	yoản	
-願	(白)yoản	
-潤	(白)yoản	
-涴	yoản	
-琬	yoản	
-畹	yoản	
-膶	(老派)yoản	
-苑	yoản	
-菀	yoản	
-院	yoản	
+㾓	oan	
+冤	oan	
+宛	oan	
+涴	oan	
+淵	oan	
+渕	oan	
+眢	oan	
+箢	oan	
+葾	oan	
+蜎	oan	
+蜿	oan	
+身	oan	
+鳶	oan	
+鴛	oan	
+鵷	oan	
+䩩	oản	
+縣	(白)oản	
+夗	oản	
+願	(白)oản	
+潤	(白)oản	
+涴	oản	
+琬	oản	
+畹	oản	
+膶	(老派)oản	
+苑	oản	
+菀	oản	
+院	oản	
 怨	yoán	
 惌	yoán	
 丸	yoàn	
@@ -6375,31 +6375,31 @@
 眩	yoạn	
 衒	yoạn	
 閏	(老派)yoạn	
-乙	yoát	
-釔	yoát	
-黦	yoát	
-刖	yoạt	
-噦	yoạt	
-悅	yoạt	
-悦	yoạt	
-抈	yoạt	
-曰	yoạt	
-月	yoạt	
-樾	yoạt	
-焫	yoạt	
-爇	yoạt	
-玥	yoạt	
-穴	yoạt	
-粵	yoạt	
-茓	yoạt	
-說	yoạt	
-説	yoạt	
-越	yoạt	
-鈅	yoạt	
-鉞	yoạt	
-閱	yoạt	
-閲	yoạt	
-軏	yoạt	
+乙	oát	
+釔	oát	
+黦	oát	
+刖	oạt
+噦	oạt
+悅	oạt
+悦	oạt
+抈	oạt
+曰	oạt
+月	oạt
+樾	oạt
+焫	oạt
+爇	oạt
+玥	oạt
+穴	oạt
+粵	oạt
+茓	oạt
+說	oạt
+説	oạt
+越	oạt
+鈅	oạt
+鉞	oạt
+閱	oạt
+閲	oạt
+軏	oạt
 佧	kha	
 卡	kha	
 咔	kha	
@@ -12457,58 +12457,58 @@
 旺	vọng	
 暀	vọng	
 王	vọng	
-烏	ô	
-於	ô	
-嗚	ô	
-圬	ô	
-塢	ô	
-汙	ô	
-污	ô	
-洿	ô	
-肟	(又)ô	
-鄔	ô	
-鎢	ô	
-靰	ô	
-𠌥	(又)ô	
-祜	ổ	
-噁	ố	
-惡	ố	
-𠌥	ố	
-乎	ồ	
-和	ồ	
-壺	ồ	
-弧	ồ	
-湖	ồ	
-煳	ồ	
-狐	ồ	
-猢	ồ	
-瑚	ồ	
-瓠	ồ	
-糊	ồ	
-餬	ồ	
-胡	ồ	
-衚	ồ	
-鬍	ồ	
-葫	ồ	
-蝴	ồ	
-醐	ồ	
-鶘	ồ	
-互	ộ	
-冱	ộ	
-嫭	ộ	
-岵	ộ	
-怙	ộ	
-戶	ộ	
-户	ộ	
-扈	ộ	
-護	ộ	
-昈	ộ	
-滬	ộ	
-濩	ộ	
-瓠	ộ	
-芋	ộ	
-鄠	ộ	
-鱯	ộ	
+烏	u
+於	u
+嗚	u
+圬	u
+塢	u
+汙	u
+污	u
+洿	u
+肟	(又)u
+鄔	u
+鎢	u
+靰	u
+𠌥	(又)u
+祜	ủ	
+噁	ú	
+惡	ú	
+𠌥	ú	
+乎	ù	
+和	ù	
+壺	ù	
+弧	ù	
+湖	ù	
+煳	ù	
+狐	ù	
+猢	ù	
+瑚	ù	
+瓠	ù	
+糊	ù	
+餬	ù	
+胡	ù	
+衚	ù	
+鬍	ù	
+葫	ù	
+蝴	ù	
+醐	ù	
+鶘	ù	
+互	ụ	
+冱	ụ	
+嫭	ụ	
+岵	ụ	
+怙	ụ	
+戶	ụ	
+户	ụ	
+扈	ụ	
+護	ụ	
+昈	ụ	
+滬	ụ	
+濩	ụ	
+瓠	ụ	
+芋	ụ	
+鄠	ụ	
+鱯	ụ	
 偎	vôi	
 椳	vôi	
 渨	vôi	
@@ -14097,7 +14097,7 @@
 乾元	khiền yoàn
 乾造	khiền chộ
 乾宅	khiền chạch
-乾曜	khiền yiệu
+乾曜	khiền yệu
 乾溼	kon sâp
 乾濕	kon sâp
 乾果	kon kỏ
@@ -14168,9 +14168,9 @@
 幹仗	kón chướng
 對仗	đối chướng
 儀仗	yì chượng
-倚仗	yỉ chượng
+倚仗	ỷ chượng
 仗恃	chượng xĩ
-依仗	yi chượng
+依仗	y chượng
 仗義疏財	chượng yị so xòi
 仗劍而立	chượng kiếm yì lập
 仗義執言	chượng yị châp yiền
@@ -14358,10 +14358,10 @@
 請假	xểnh khá
 度假	độ khá
 假日	khá yật
-依傍	yi bọng
-依山傍水	yi san bọng sổi
+依傍	y bọng
+依山傍水	y san bọng sổi
 傍人籬壁	bọng yần lì bich
-傍人門戶	bọng yần mồn vộ
+傍人門戶	bọng yần mồn ụ
 傍大款	bọng đại phổn
 傍晚	pòng mãn
 傍晌	pòng hưởng
@@ -14476,7 +14476,7 @@
 冠名	quốn mềnh
 冠詞	quốn xù
 冠詞	quốn xì
-衣冠	yi quôn
+衣冠	y quôn
 冠冕	quôn miễn
 冠蓋	quôn kói
 冠心病	quôn slâm bệnh
@@ -14665,7 +14665,7 @@
 叨叨絮絮	đô đô slứ slứ
 叨念	đô niệm
 叨光	thô kong
-叨擾	thô yiểu
+叨擾	thô yểu
 叨教	thô káo
 叨竊	thô xiết
 叨竊非據	thô xiết phi kứ
@@ -14745,7 +14745,7 @@
 鼻咽癌	bị yiên ngàm
 哽咽	kẳng yiết
 咽泣	yiết yâp
-嗚咽	ô yiết
+嗚咽	u yiết
 悲咽	bi yiết
 填咽	thiền yiết
 咯血	khách hoát
@@ -14788,7 +14788,7 @@
 啞然而笑	ăc yiền yì sliếu
 啞然失笑	ăc yiền sât sliếu
 鴉聲啞啞	a sênh ăc ăc
-咿啞	yi a
+咿啞	y a
 喀山	hách san
 喀什	hách sập
 喀什市	hách sập sĩ
@@ -14944,7 +14944,7 @@
 邊塞	biên sói
 塞外	sói ngọi
 出塞	xoat sói
-要塞	yiếu sói
+要塞	yếu sói
 塞翁失馬	sói yung sât mã
 壅土	ung tổ
 壅肥	ung phì
@@ -14992,7 +14992,7 @@
 君子好逑	quân chỉ hố khầu
 各有所好	kóc yẫu slỏ hố
 好生之德	hố sanh chi đăc
-好逸惡勞	hố yật vố lồ
+好逸惡勞	hố yật ú lồ
 和尚	vò sưởng
 好行	hổ hành
 好壞	hổ vại
@@ -15124,7 +15124,7 @@
 將才	chướng xòi
 將士	chướng sụ
 將士	chướng sị
-衣領	yi lễnh
+衣領	y lễnh
 衫領	sam lễnh
 方領	phong lễnh
 紅領	hùng lễnh
@@ -15133,7 +15133,7 @@
 將來	chương lòi
 將近	chương kận
 將就	chương chậu
-將要	chương yiếu
+將要	chương yếu
 將軍	chương quân
 將養	chương yưỡng
 將息	chương slich
@@ -15219,7 +15219,7 @@
 差之毫釐	xa chi hồ lì
 太差	thái xa
 差價	xa ká
-差互	xa vộ
+差互	xa ụ
 差失	xa sât
 差點	xa điểm
 差點兒	xa điểm yì
@@ -15329,7 +15329,7 @@
 強行	khường hằng
 強直	khường chịch
 強龍不壓地頭蛇	khường lùng bât át đị tầu sè
-硬要	ngảnh yiếu
+硬要	ngảnh yếu
 硬係	ngảnh hạy
 勉強	miễn khưỡng
 強求	khưỡng khầu
@@ -15423,13 +15423,13 @@
 恫瘝	thung quan
 恫瘝乃身	thung quan nãi sân
 恫瘝在抱	thung quan chọi pỗ
-可惡	hỏ vố
-厭惡	yiếm vố
-好惡	hố vố
-深惡痛絕	sâm vố túng choạt
-羞惡之心	slâu vố chi slâm
-諱惡	ụy vố
-諱惡不悛	ụy vố bât sloan
+可惡	hỏ ú
+厭惡	yiếm ú
+好惡	hố ú
+深惡痛絕	sâm ú túng choạt
+羞惡之心	slâu ú chi slâm
+諱惡	ụy ú
+諱惡不悛	ụy ú bât sloan
 善惡	siện óc
 惡霸	óc bá
 惡心	óc slâm
@@ -15476,7 +15476,7 @@
 回應	vồi yính
 適應	sich yính
 感應	kảm yính
-應邀	yính yiêu
+應邀	yính yêu
 應屆	yính kái
 應戰	yính chiến
 應時	yính sì
@@ -15555,7 +15555,7 @@
 挾帶	hiếp đái
 挨近	ai khẫn
 挨住	ai chự
-挨家挨戶	ai ka ai vộ
+挨家挨戶	ai ka ai ụ
 挨肩搭背	ai kiên đáp bối
 挨次	ai xú
 挨次	ai xí
@@ -15918,7 +15918,7 @@
 楷木	kai mục
 樟木籠	chương mục lũng
 籠箱	lũng slương
-衣籠	yi lũng
+衣籠	y lũng
 仁者樂山	yần chẻ ngạo san
 樂羣	ngạo khuần
 樂業	ngạo niệp
@@ -16119,7 +16119,7 @@
 溜牆根	liêu xường kân
 溜鬚	liêu slô
 溜鬚拍馬	liêu slô pách mã
-溜腰花	liêu yiêu pha
+溜腰花	liêu yêu pha
 溜圓	liêu yoàn
 溜尖	liêu chiêm
 溜熟	liêu sục
@@ -16202,7 +16202,7 @@
 廣爲流傳	kỏng ùy lầu xoàn
 深爲感動	sâm ùy kảm đụng
 大爲高興	đại ùy kô hính
-極爲重要	kịch ùy xũng yiếu
+極爲重要	kịch ùy xũng yếu
 頗爲得意	pỏ ùy đăc yí
 爲數不多	ùy số bât đo
 爲數有限	ùy số yẫu hạn
@@ -16265,7 +16265,7 @@
 犄角	ki kóc
 犄角旮旯	ki kóc khá lá
 犄角之勢	ki kóc chi sáy
-互爲犄角	vộ ùy ki kóc
+互爲犄角	ụ ùy ki kóc
 率領	sloat lĩnh
 率先	sloat sliên
 率直	sloat chịch
@@ -16340,13 +16340,13 @@
 琉璃	lầu lì
 玳瑁	đọi mội
 瓠落	vọc lọc
-瓠蘆	ồ lồ
-瓠瓜	vộ qua
-瓠子	vộ chủ
-瓠子	vộ chỉ
-瓠果	vộ kỏ
-瓠肥	vộ phì
-瓠犀	vộ slay
+瓠蘆	ù 	lồ
+瓠瓜	ụ qua
+瓠子	ụ chủ
+瓠子	ụ chỉ
+瓠果	ụ kỏ
+瓠肥	ụ phì
+瓠犀	ụ slay
 瓠蘆	khồ lồ
 瓠瓜	khồ qua
 瓠子	khồ chủ
@@ -16429,7 +16429,7 @@
 當時得令	đong sì đăc lịnh
 當之無愧	đong chi mồ khúy
 當務之急	đong mộ chi kâp
-門當戶對	mồn đong vộ đối
+門當戶對	mồn đong ụ đối
 當頭棒喝	đong tầu bọng hót
 獨當一面	đục đong yât miện
 理當如此	lĩ đong yừ xủ
@@ -16533,7 +16533,7 @@
 相面	slướng miện
 相機而動	slướng ki yì đụng
 醜相	xẩu slướng
-互相	vộ slương
+互相	ụ slương
 相幫	slương bong
 相干	slương kon
 相左	slương chỏ
@@ -16665,7 +16665,7 @@
 祇顧	chỉ kố
 不祇	bât chỉ
 祇係	chỉ hạy
-祇要	chỉ yiếu
+祇要	chỉ yếu
 祇不過	chỉ bât kó
 神祇	sần khì
 祇悔	khì phổi
@@ -16759,7 +16759,7 @@
 身毒	yoan đuc
 稱心	xính slâm
 稱身	xính sân
-衣不稱身	yi bât xính sân
+衣不稱身	y bât xính sân
 稱意	xính yí
 稱職	xính chich
 稱心如意	xính slâm yừ yí
@@ -16893,7 +16893,7 @@
 見縫插針	kiến phụng xáp châm
 天衣無縫	thiên yi mồ phụng
 無縫	mồ phụng
-衣縫	yi phụng
+衣縫	y phụng
 縱橫	chụng vành
 縱深	chụng sâm
 縱貫	chụng quốn
@@ -17061,7 +17061,7 @@
 膀子	bỏng chỉ
 膀爺	bỏng yè
 臂膀	bí bỏng
-膀大腰圓	bỏng đại yiêu yoàn
+膀大腰圓	bỏng đại yêu yoàn
 吊膀子	điếu bỏng chủ
 吊膀子	điếu bỏng chỉ
 膀胱	pòng kong
@@ -17213,7 +17213,7 @@
 肩負重荷	kiên phộ xũng họ
 感荷	kảm họ
 着衫	chước sam
-衣着	yi chước
+衣着	y chước
 着衣	chước yi
 穿着	xoan chước
 吃着不盡	hếc chước bât chận
@@ -17270,7 +17270,7 @@
 着想	chược slưởng
 着重	chược xũng
 著衫	chước sam
-衣著	yi chước
+衣著	y chước
 著衣	chước yi
 穿著	xoan chước
 吃著不盡	hếc chước bât chận
@@ -17699,48 +17699,48 @@
 雪褸	sloát lâu
 風褸	phung lâu
 襤褸	làm lữ
-重要	xũng yiếu
-想要	slưởng yiếu
-要人	yiếu yần
-要津	yiếu choan
-要津	yiếu chân
-要素	yiếu slố
-要害	yiếu họi
-要衝	yiếu xung
-概要	khói yiếu
-要事	yiếu sụ
-要事	yiếu sị
-要點	yiếu điểm
-要是	yiếu sị
-要件	yiếu kiện
-綱要	kong yiếu
-摘要	chạch yiếu
-要錢	yiếu xiền
-要飯	yiếu phạn
-需要	slư yiếu
-要強	yiếu khường
-要隘	yiếu ái
-要道	yiếu độ
-要端	yiếu đoan
-要犯	yiếu phạn
-要好	yiếu hổ
-要緊	yiếu kẩn
-要職	yiếu chich
-要略	yiếu lược
-要命	yiếu mệnh
-要言不煩	yiếu yiền bât phàn
-要訣	yiếu khoát
-要之	yiếu chi
-要旨	yiếu chỉ
-要領	yiếu lĩnh
-高要	kô yiếu
-高要縣	kô yiếu yoạn
-高要市	kô yiếu sĩ
-要求	yiêu khầu
-要約	yiêu yước
-要挾	yiêu hiếp
-要盟	yiêu mằng
-要譽	yiêu yự
+重要	xũng yếu
+想要	slưởng yếu
+要人	yếu yần
+要津	yếu choan
+要津	yếu chân
+要素	yếu slố
+要害	yếu họi
+要衝	yếu xung
+概要	khói yếu
+要事	yếu sụ
+要事	yếu sị
+要點	yếu điểm
+要是	yếu sị
+要件	yếu kiện
+綱要	kong yếu
+摘要	chạch yếu
+要錢	yếu xiền
+要飯	yếu phạn
+需要	slư yếu
+要強	yếu khường
+要隘	yếu ái
+要道	yếu độ
+要端	yếu đoan
+要犯	yếu phạn
+要好	yếu hổ
+要緊	yếu kẩn
+要職	yếu chich
+要略	yếu lược
+要命	yếu mệnh
+要言不煩	yếu yiền bât phàn
+要訣	yếu khoát
+要之	yếu chi
+要旨	yếu chỉ
+要領	yếu lĩnh
+高要	kô yếu
+高要縣	kô yếu yoạn
+高要市	kô yếu sĩ
+要求	yêu khầu
+要約	yêu yước
+要挾	yêu hiếp
+要盟	yêu mằng
+要譽	yêu yự
 覃思	thàm su
 覃思	thàm si
 覃第	thàm đạy
@@ -17948,7 +17948,7 @@
 用料	yụng liểu
 碎料	slối liểu
 肥料	phì liểu
-衣料	yi liểu
+衣料	y liểu
 資料	chu liểu
 資料	chi liểu
 配料	pối liểu
@@ -17968,9 +17968,9 @@
 始料不及	xỉ liệu bât kập
 豈料	hỉ liệu
 未料	mị liệu
-意料	yí liệu
-意料之中	yí liệu chi chung
-意料之外	yí liệu chi ngọi
+意料	ý liệu
+意料之中	ý liệu chi chung
+意料之外	ý liệu chi ngọi
 乜斜	mè slè
 乜斜	me xè
 音調	yâm điệu
@@ -18220,7 +18220,7 @@
 造化	chộ phá
 造就	chộ chậu
 造福	chộ phuc
-造謠	chộ yiều
+造謠	chộ yều
 造次	chộ xú
 造次	chộ xí
 造化弄人	chộ phá nụng yần
@@ -18430,7 +18430,7 @@
 鑽石	choán sệc
 風鑽	phung choán
 電鑽	điện choán
-手搖鑽	sẩu yiều choán
+手搖鑽	sẩu yều choán
 鑽戒	choán kái
 鑽孔	choán hủng
 鑽頭	choán tầu
@@ -18955,9 +18955,9 @@
 㞓魂失	hay vần sât
 至	chí
 勁	kịnh
-要冇是	yiếu mỗ sị
-要冇然	yiếu mỗ yiền
-要冇係	yiếu mỗ hạy
+要冇是	yếu mỗ sị
+要冇然	yếu mỗ yiền
+要冇係	yếu mỗ hạy
 一冇係	yât mỗ hạy
 是但	sị đạn
 同點	thùng điểm
@@ -19027,8 +19027,8 @@
 油脂的	yầu chi đich
 柔姿車	yầu chi xe
 柔姿的	yầu chi đich
-咿㕭	yi yao
-咿呦	yi yao
+咿㕭	y yao
+咿呦	y yao
 呇水	mấn sổi
 汶水	mấn sổi
 埌東	lõng đung
@@ -19125,8 +19125,8 @@
 躘蹱	lúng xúng
 躘躘蹱蹱	lúng lúng xúng xúng
 飲酒醉	yẩm chẩu chối
-要唔是	yiếu m̀ sị
-要唔然	yiếu m̀ yiền
+要唔是	yếu m̀ sị
+要唔然	yếu m̀ yiền
 奇離柺	khè lè quải
 差火	xa phỏ
 底挺	đảy tỉnh
