--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -2820,16 +2820,16 @@
 𡲬	quật	
 倔	quật	
 𧊅	quẻ	
-蟈	quych	
-幗	quych	
-膕	quych	
-聝	quych	
-馘	quych	
-虢	quych	
-鵙	quych	
-郄	quych	
-郤	quych	
-隙	quych	
+蟈	quich	
+幗	quich	
+膕	quich	
+聝	quich	
+馘	quich	
+虢	quich	
+鵙	quich	
+郄	quich	
+郤	quich	
+隙	quich	
 扃	quynh	
 熲	quỷnh	
 炅	quỷnh	
@@ -4546,11 +4546,11 @@
 哐	khuăng	
 纊	khuắng	
 屈	khuât	
-隙	khuych	
-郤	khuych	
-洫	khuych	
-馘	khuych	
-闃	khuych	
+隙	khuich	
+郤	khuich	
+洫	khuich	
+馘	khuich	
+闃	khuich	
 擴	khuóc	
 廓	khuóc	
 況	khuóng	
