--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -4250,13 +4250,13 @@
 颳	(白)quét	
 括	(白)quét	
 擖	(訓)quét	
-鶪	quych	
-洫	quych	
-湨	quych	
-綌	quych	
-虢	quych	
-闃	quych	
-馘	quych	
+鶪	quich	
+洫	quich	
+湨	quich	
+綌	quich	
+虢	quich	
+闃	quich	
+馘	quich	
 坰	quynh	
 扃	quynh	
 駉	quynh	
@@ -7025,10 +7025,10 @@
 擓	(白)khué	
 瘸	khuè	
 蟝	(語)khuè	
-掝	khuych	
-郄	khuych	
-郤	khuych	
-隙	khuych	
+掝	khuich	
+郄	khuich	
+郤	khuich	
+隙	khuich	
 㘗	khư	
 㭕	khư	
 佉	khư	
@@ -16888,7 +16888,7 @@
 縫線	phùng sliến
 裂縫	liệt phụng
 門縫	mồn phụng
-縫隙	phụng khuych
+縫隙	phụng khuich
 一條縫	yât tiều phụng
 見縫插針	kiến phụng xáp châm
 天衣無縫	thiên yi mồ phụng
@@ -18580,7 +18580,7 @@
 亭子間	thình chủ kan
 亭子間	thình chỉ kan
 間隔	kán kách
-間隙	kán khuych
+間隙	kán khuich
 間斷	kán toãn
 離間	lì kán
 間接	kán chiếp
