--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -10458,40 +10458,40 @@
 𠺌	qoa	
 珪	qoai	
 𪚩	qôi	
-㶁	quych
-㷦	quych
-䂆	quych
-䦗	quych
-䧍	quych
-䱛	quych
-伵	quych
-侐	quych
-殈	quych
-洫	quych
-淢	quych
-湨	quych
-犑	quych
-狊	quych
-盢	quych
-綌	quych
-聝	quych
-虢	quych
-虩	quych
-覤	quych
-郄	quych
-郤	quych
-郹	quych
-鄲	quych
-閴	quych
-闃	quych
-隙	quych
-隟	quych
-馘	quych
-鴂	quych
-鵙	quych
-鶪	quych
-鼰	quych
-鼳	quych
+㶁	quich
+㷦	quich
+䂆	quich
+䦗	quich
+䧍	quich
+䱛	quich
+伵	quich
+侐	quich
+殈	quich
+洫	quich
+淢	quich
+湨	quich
+犑	quich
+狊	quich
+盢	quich
+綌	quich
+聝	quich
+虢	quich
+虩	quich
+覤	quich
+郄	quich
+郤	quich
+郹	quich
+鄲	quich
+閴	quich
+闃	quich
+隙	quich
+隟	quich
+馘	quich
+鴂	quich
+鵙	quich
+鶪	quich
+鼰	quich
+鼳	quich
 㺾	quynh	
 䮐	quynh	
 冂	quynh	
@@ -18026,21 +18026,21 @@
 蔨	khuẫn	
 蜠	khuẫn	
 㚚	khuăng	
-䠐	khuych
-䱛	khuych
-侐	khuych
-掝	khuych
-洫	khuych
-淢	khuych
-烅	khuych
-綌	khuych
-郄	khuych
-郤	khuych
-郥	khuych
-閾	khuych
-闃	khuych
-隙	khuych
-隟	khuych
+䠐	khuich
+䱛	khuich
+侐	khuich
+掝	khuich
+洫	khuich
+淢	khuich
+烅	khuich
+綌	khuich
+郄	khuich
+郤	khuich
+郥	khuich
+閾	khuich
+闃	khuich
+隙	khuich
+隟	khuich
 㗥	khuóc	
 㨯	khuóc	
 廓	khuóc	
