--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -13089,7 +13089,7 @@
 （廣州音）	褝	đan
 （廣州音）	襌	đan
 （南寧音）	襌	đan
-（廣州音）	鄲	quych
+（廣州音）	鄲	quich
 （廣州音）	鄲	đan
 （台山音）	鄲	án
 （欽州音）	鄲	đan
@@ -26796,94 +26796,94 @@
 （廣州音）	𥇣	quật
 （廣州音）	𠺌	qoa
 （廣州音）	𪚩	qui
-（廣州音）	㶁	quych
-（廣州音）	㷦	quych
-（廣州音）	䂆	quych
-（廣州音）	䦗	quych
-（廣州音）	䧍	quych
+（廣州音）	㶁	quich
+（廣州音）	㷦	quich
+（廣州音）	䂆	quich
+（廣州音）	䦗	quich
+（廣州音）	䧍	quich
 （廣州音）	䱛	khuich
-（廣州音）	䱛	quych
-（廣州音）	伵	quych
+（廣州音）	䱛	quich
+（廣州音）	伵	quich
 （廣州音）	侐	khuich
-（廣州音）	侐	quych
-（廣州音）	殈	quych
+（廣州音）	侐	quich
+（廣州音）	殈	quich
 （廣州音）	洫	khuich
-（廣州音）	洫	quych
+（廣州音）	洫	quich
 （台山音）	洫	khich
 （欽州音）	洫	khuich
-（南寧音）	洫	quych
+（南寧音）	洫	quich
 （廣州音）	淢	khuich
-（廣州音）	淢	quych
+（廣州音）	淢	quich
 （廣州音）	淢	vịch
 （台山音）	淢	khich
 （台山音）	淢	vịch
-（廣州音）	湨	quych
-（南寧音）	湨	quych
-（廣州音）	犑	quych
-（廣州音）	狊	quych
-（廣州音）	盢	quych
+（廣州音）	湨	quich
+（南寧音）	湨	quich
+（廣州音）	犑	quich
+（廣州音）	狊	quich
+（廣州音）	盢	quich
 （廣州音）	綌	khuich
-（廣州音）	綌	quych
+（廣州音）	綌	quich
 （台山音）	綌	khich
-（南寧音）	綌	quych
-（廣州音）	聝	quych
+（南寧音）	綌	quich
+（廣州音）	聝	quich
 （廣州音）	聝	quóc
 （台山音）	聝	khich
-（欽州音）	聝	quych
-（廣州音）	虢	quych
+（欽州音）	聝	quich
+（廣州音）	虢	quich
 （台山音）	虢	khich
-（欽州音）	虢	quych
+（欽州音）	虢	quich
 （南寧音）	虢	(又)kóc
-（南寧音）	虢	quych
+（南寧音）	虢	quich
 （廣州音）	虩	hich
-（廣州音）	虩	quych
-（廣州音）	覤	quych
+（廣州音）	虩	quich
+（廣州音）	覤	quich
 （廣州音）	郄	khuich
-（廣州音）	郄	quych
+（廣州音）	郄	quich
 （台山音）	郄	khich
-（欽州音）	郄	quych
-（南寧音）	郄	khuych
+（欽州音）	郄	quich
+（南寧音）	郄	khuich
 （廣州音）	郤	khuich
-（廣州音）	郤	quych
+（廣州音）	郤	quich
 （欽州音）	郤	khuich
-（欽州音）	郤	quych
-（南寧音）	郤	khuych
-（廣州音）	郹	quych
-（廣州音）	閴	quych
+（欽州音）	郤	quich
+（南寧音）	郤	khuich
+（廣州音）	郹	quich
+（廣州音）	閴	quich
 （廣州音）	闃	khuich
-（廣州音）	闃	quych
+（廣州音）	闃	quich
 （台山音）	闃	khich
 （欽州音）	闃	khuich
 （欽州音）	闃	khặc
-（南寧音）	闃	quych
+（南寧音）	闃	quich
 （廣州音）	隙	khuich
-（廣州音）	隙	quych
+（廣州音）	隙	quich
 （台山音）	隙	khich
 （欽州音）	隙	khuich
-（欽州音）	隙	quych
+（欽州音）	隙	quich
 （南寧音）	隙	(常)khich
-（南寧音）	隙	khuych
+（南寧音）	隙	khuich
 （廣州音）	隟	khuich
-（廣州音）	隟	quych
-（廣州音）	馘	quych
+（廣州音）	隟	quich
+（廣州音）	馘	quich
 （廣州音）	馘	quóc
 （台山音）	馘	khich
 （欽州音）	馘	khuich
-（欽州音）	馘	quych
-（南寧音）	馘	quych
+（欽州音）	馘	quich
+（南寧音）	馘	quich
 （廣州音）	鴂	khoát
-（廣州音）	鴂	quych
+（廣州音）	鴂	quich
 （台山音）	鴂	khut
 （廣州音）	鵙	khoát
-（廣州音）	鵙	quych
+（廣州音）	鵙	quich
 （台山音）	鵙	khut
-（欽州音）	鵙	quych
+（欽州音）	鵙	quich
 （廣州音）	鶪	khoát
-（廣州音）	鶪	quych
+（廣州音）	鶪	quich
 （台山音）	鶪	khut
-（南寧音）	鶪	quych
-（廣州音）	鼰	quych
-（廣州音）	鼳	quych
+（南寧音）	鶪	quich
+（廣州音）	鼰	quich
+（廣州音）	鼳	quich
 （廣州音）	㺾	quynh
 （廣州音）	䮐	quynh
 （廣州音）	冂	quynh
@@ -27088,7 +27088,7 @@
 （南寧音）	崞	khóc
 （廣州音）	幗	quóc
 （台山音）	幗	koc
-（欽州音）	幗	quych
+（欽州音）	幗	quich
 （南寧音）	幗	kóc
 （廣州音）	彍	khuóc
 （廣州音）	彍	quóc
@@ -27117,11 +27117,11 @@
 （廣州音）	簂	quóc
 （廣州音）	膕	quóc
 （台山音）	膕	koc
-（欽州音）	膕	quych
+（欽州音）	膕	quich
 （南寧音）	膕	kóc
 （廣州音）	蟈	quóc
 （台山音）	蟈	koc
-（欽州音）	蟈	quych
+（欽州音）	蟈	quich
 （南寧音）	蟈	kóc
 （廣州音）	郭	quóc
 （台山音）	郭	khóc
@@ -41456,7 +41456,7 @@
 （廣州音）	掝	khuich
 （廣州音）	掝	vạch
 （南寧音）	掝	(語)yặc
-（南寧音）	掝	khuych
+（南寧音）	掝	khuich
 （南寧音）	掝	vạch
 （南寧音）	掝	(語)vặc
 （廣州音）	烅	khuich
